# hse-cpp-base-image-processor

./: CMakeLists.txt  image_processor.cpp  readme.md
src/argument_parser/: argument_parser.cpp  argument_parser.h
src/bitmap_processing/: bitmap_data.cpp  bitmap_data.h
src/filter/: filter.h  matrix_filter.cpp  matrix_filter.h
src/filter/crop/: crop_filter.cpp  crop_filter.h
src/filter/edge_detection/: edge_detection_filter.cpp  edge_detection_filter.h
src/filter/gaussian_blur/: gaussian_blur_filter.cpp  gaussian_blur_filter.h
src/filter/grayscale/: grayscale_filter.cpp  grayscale_filter.h
src/filter/negative/: negative_filter.cpp  negative_filter.h
src/filter/sharpening/: sharpening_filter.cpp  sharpening_filter.h
src/filter/twirl/: twirl_filter.cpp  twirl_filter.h
src/filter_controller/: filter_controller.cpp  filter_controller.h
src/image/: Image.cpp  Image.h
src/shared/: Color.h
